# isitstilldown

./: .gitignore  .gitmodules  README.md  docker-compose.yml  start
api/: Dockerfile  README.md  main.go  main.py  openapi_spec_isitstilldown.yaml
api/go/: README.md  api_events.go  logger.go  model_api_response.go  model_ping_event.go  routers.go
domain-watcher/: Cargo.toml  Dockerfile  domains.txt  env.sample
domain-watcher/src/: lib.rs  main.rs
domain-watcher/src/kafka/: mod.rs  producer.rs
exploration/: consumer.py  domains.txt  domains_explorer.ipynb  top_20_domains.txt
ingester/: Dockerfile  main.py  models.py  requirements.txt
