[package]
name = "domain-watcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.8.0"

[lib]
doctest = false

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
rdkafka = { version = "0.26", features = ["cmake-build", "ssl", "gssapi", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
env_logger = "0.9.0"
prost = "0.8.0"
futures = "0.3.17"
uuid = { version = "0.8.2", features = ["v4"] }
log = "0.4.14"
envy = "0.4.2"
dotenv = "0.15.0"
rmp-serde = "0.15"
bytes = "1"